--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,11 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1.0.38"
+futures = "0.3.12"
+futures-timer = "3.0.2"
 ggez = "0.5.1"
 legion = "0.3.1"
+once_cell = "1.5.2"
 rayon = "1.5.0"
 serde = "1.0.120"
 serde_json = "1.0.61"
